<resources>
    <string name="app_name">ALC Phase 1</string>
    <string name="welcome_to_alc_4_0">Welcome to ALC 4.0</string>
    <string name="about_alc">About ALC</string>
    <string name="my_profile">MY PROFILE</string>
    <string name="name">Name:</string>
    <string name="rose_akoth">Rose Akoth</string>
    <string name="track">Track:</string>
    <string name="track_name">Android</string>
    <string name="country">Country:</string>
    <string name="country_name">Kenya</string>
    <string name="email">Email:</string>
    <string name="email_name">roseakoth2015@gmail.com</string>
    <string name="phonenumber">PhoneNumber:</string>
    <string name="phone_num">254743813923</string>
    <string name="slack_username">Slack username:</string>
    <string name="slack_name">\@RoseStacy</string>

</resources>
